--- a/index.html
+++ b/index.html
@@ -1,1 +1,351 @@
-"hello world" 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+</head>
+
+<body>
+    <!--Scroll to top button-->
+    <div class="scrollToTop-btn flex-center">
+        <i class="fas fa-arrow-up"></i>
+    </div>
+
+    <!--Header-->
+    <header>
+        <div class="nav-bar">
+            <a href="#" class="logo">Paul</a>
+            <div class="navigation">
+                <div class="nav-items">
+                    <div class="nav-close-btn"></div>
+                    <a class="active" href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#skills">Skills</a>
+                    <a href="#projects">Projects</a>
+                    <a href="#contact">Contact</a>
+                </div>
+            </div>
+            <div class="nav-menu-btn"></div>
+        </div>
+    </header>
+
+    <!--Home section-->
+    <section class="home flex-center" id="home">
+        <div class="home-container">
+            <div class="media-icons">
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-twitter"></i></a>
+            </div>
+            <div class="info">
+                <h2>Hello i'm Paul</h2>
+                <h3>Developer</h3>
+                <p>I creeate something really great. I'm so excited to be part of your team to contribute my knowledge
+                </p>
+                <a href="" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
+            </div>
+            <div class="home-img">
+                <img src="images/main-photo.jpg" alt="">
+            </div>
+        </div>
+        <a href="#about" class="scroll-down">Scroll Down <i class="fas fa-arrow-down"></i></a>
+    </section>
+
+    <!--About section-->
+    <section class="about section" id="about">
+        <div class="container flex-center">
+            <h1 class="section-title-01">About Me</h1>
+            <h2 class="section-title-02">About Me</h2>
+            <div class="content flex-center">
+                <div class="about-img">
+                    <img src="images/main-photo.jpg" alt="">
+                </div>
+                <div class="about-info">
+                    <div class="description">
+                        <h3>I'm Paul Kim</h3>
+                        <h4>A Junior <span>software developer</span> based in <span>Vancouver</span></h4>
+                        <p>I do this and that and go there and where</p>
+                    </div>
+                    <ul class="professional-list">
+                        <li class="list-item">
+                            <h3>5+</h3>
+                            <span>Years of<br> Experiences</span>
+                        </li>
+                        <li class="list-item">
+                            <h3>5+</h3>
+                            <span>Years of<br> Experiences</span>
+                        </li>
+                        <li class="list-item">
+                            <h3>5+</h3>
+                            <span>Years of<br> Experiences</span>
+                        </li>
+                    </ul>
+                    <a href="" class="btn">Download CV <i class="fas fa-download"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Skills section-->
+
+    <section class="skills section" id="skills">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Skills</h1>
+            <h2 class="section-title-02">Skills</h2>
+            <div class="content">
+                <div class="skills-description">
+                    <h3>Education</h3>
+                    <p>From BCIT CST program blah blah blah allectetctetct...</p>
+                </div>
+                <div class="skills-info education-all">
+                    <div class="education">
+                        <h4><label>Education</label></h4>
+                        <ul class="edu-list">
+                            <li class="item">
+                                <span class="year">2020-2021</span>
+                                <p><span>Diploma in Computer System Technology</span></p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2020-2021</span>
+                                <p><span>Diploma in Computer System Technology</span></p>
+                            </li>
+                            <li class="item">
+                                <span class="year">2020-2021</span>
+                                <p><span>Diploma in Computer System Technology</span></p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="education">
+                        <h4><label>Skills</label></h4>
+                        <ul class="bars">
+                            <li class="bar">
+                                <div class="info">
+                                    <span>HTML</span>
+                                    <span>95%</span>
+                                </div>
+                                <div class="line html"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>JS</span>
+                                    <span>60%</span>
+                                </div>
+                                <div class="line javascript"></div>
+                            </li>
+                            <li class="bar">
+                                <div class="info">
+                                    <span>CSS</span>
+                                    <span>50%</span>
+                                </div>
+                                <div class="line css"></div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="skills-description">
+                    <h3>Work & Experience</h3>
+                </div>
+                <div class="skills-info">
+                    <div class="experience-card">
+                        <div class="upper">
+                            <h3>Intern Software Engineer</h3>
+                            <h5>Full Time, Vancouver, BC</h5>
+                            <span>May, 2020 - Jan, 2021</span>
+                        </div>
+                        <div class="hr"></div>
+                        <h4><label>Mastercard</label></h4>
+                        <p>developed something.... description...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Projects section -->
+    <section class="projects section" id="projects">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Projects</h1>
+            <h2 class="section-title-02">Projects</h2>
+            <div class="content">
+                <div class="projects-list">
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Web Design</h3>
+                                <span>Youtube</span>
+                            </div>
+                            <img src="images/uhere-logo-sample.png" alt="">
+                        </div>
+                        <div class="projects-modal flex-center">
+                            <div class="projects-modal-body">
+                                <i class="fas fa-times projects-close-btn"></i>
+                                <h3>Web Design</h3>
+                                <img src="images/uhere-logo-sample.png" alt="">
+                                <p>Hello World!!!!!!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Ktown</h3>
+                                <span>Youtube</span>
+                            </div>
+                            <img src="images/ktown-logo-sample.jpg" alt="">
+                        </div>
+                        <div class="projects-modal flex-center">
+                            <div class="projects-modal-body">
+                                <i class="fas fa-times projects-close-btn"></i>
+                                <h3>Web Design</h3>
+                                <img src="images/uhere-logo-sample.png" alt="">
+                                <p>Hello World!!!!!!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Web Design</h3>
+                                <span>Youtube</span>
+                            </div>
+                            <img src="images/uhere-logo-sample.png" alt="">
+                        </div>
+                        <div class="projects-modal flex-center">
+                            <div class="projects-modal-body">
+                                <i class="fas fa-times projects-close-btn"></i>
+                                <h3>Web Design</h3>
+                                <img src="images/uhere-logo-sample.png" alt="">
+                                <p>Hello World!!!!!!</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="img-card-container">
+                        <div class="img-card">
+                            <div class="overlay"></div>
+                            <div class="info">
+                                <h3>Web Design</h3>
+                                <span>Youtube</span>
+                            </div>
+                            <img src="images/uhere-logo-sample.png" alt="">
+                        </div>
+                        <div class="projects-modal flex-center">
+                            <div class="projects-modal-body">
+                                <i class="fas fa-times projects-close-btn"></i>
+                                <h3>Web Design</h3>
+                                <img src="images/uhere-logo-sample.png" alt="">
+                                <p>Hello World!!!!!!</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Get-in-touch -->
+    <!-- 
+    <div class="get-in-touch sub-section">
+        <div class="container">
+            <div class="content flex-center">
+                <div class="contact-card flex-center">
+                    <div class="title">
+                        <h4>Let's Talk</h4>
+                        <h3>About Your</h3>
+                        <h2>next project</h2>
+                    </div>
+                    <div class="contact-btn">
+                        <a href="" class="btn">Get In Touch <i class="fas fa-paper-plane"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+-->
+
+    <!-- Contact Section -->
+    <section class="contact section" id="contact">
+        <div class="container flex-center">
+            <h1 class="section-title-01">Contact Me</h1>
+            <h2 class="section-title-02">Contact Me</h2>
+            <div class="content">
+                <div class="contact-left">
+                    <h2>Let's discusss your project</h2>
+                    <ul class="contact-list">
+                        <li>
+                            <h3 class="item-title"><i class="fas fa-phone"></i> Phone</h3>
+                            <span>+1 778-886-5566</span>
+                        </li>
+                        <li>
+                            <h3 class="item-title"><i class="fas fa-envelope"></i> Email Address</h3>
+                            <span><a href="mailto:paulgmkim@gmail.com">paulgmkim@gmail.com</a></span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="contact-right">
+                    <p>I'm always open to discuss product <br> <span>design work or partnership</span></p>
+                    <form action="" class="contact-form" id="contact-form-email">
+                        <div class="first-row">
+                            <input type="text" name="name" id="form-name" placeholder="Name">
+                        </div>
+                        <div class="second-row">
+                            <input type="email" name="email" id="form-email" placeholder="Email">
+                        </div>
+                        <div class="third-row">
+                            <textarea name="message" id="form-message" rows="7" placeholder="Message"></textarea>
+                        </div>
+                        <button class="btn" id="submit-btn" type="button"> Send Message <i class="fas fa-paper-plane"></i></button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="about group">
+                <h2>Paul</h2>
+                <p>Front-end Developer</p>
+                <a href="#about">About Me</a>
+            </div>
+            <div class="hr"></div>
+            <div class="info group">
+                <h3>More</h3>
+                <ul>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </div>
+            <div class="hr"></div>
+            <div class="follow group">
+                <h3>Follow</h3>
+                <ul>
+                    <li><a href=""><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href=""><i class="fab fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fab fa-twitter"></i></a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-copyright group">
+            <p>© 2022 Paul Kim. All rights reserved.</p>
+        </div>
+    </footer>
+
+
+    <!--External scripts-->
+    <script src="js/main.js"></script>
+</body>
+
+</html>
