email enabled with loading

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Paul Kim</title>
+    <link rel="icon" href="images/developer-icon.png">
     <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
@@ -48,7 +49,7 @@
             <div class="info">
                 <h2>Hello i'm Paul</h2>
                 <h3>Developer</h3>
-                <p>I creeate something really great. I'm so excited to be part of your team to contribute my knowledge
+                <p>A passionate and meticulous software developer who likes problem solving.
                 </p>
                 <a href="" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
@@ -72,19 +73,19 @@
                     <div class="description">
                         <h3>I'm Paul Kim</h3>
                         <h4>A Junior <span>software developer</span> based in <span>Vancouver</span></h4>
-                        <p>I do this and that and go there and where</p>
+                        <p>I do ..................</p>
                     </div>
                     <ul class="professional-list">
                         <li class="list-item">
-                            <h3>5+</h3>
+                            <h3>1+</h3>
                             <span>Years of<br> Experiences</span>
                         </li>
                         <li class="list-item">
-                            <h3>5+</h3>
+                            <h3>1+</h3>
                             <span>Years of<br> Experiences</span>
                         </li>
                         <li class="list-item">
-                            <h3>5+</h3>
+                            <h3>1+</h3>
                             <span>Years of<br> Experiences</span>
                         </li>
                     </ul>
@@ -103,7 +104,7 @@
             <div class="content">
                 <div class="skills-description">
                     <h3>Education</h3>
-                    <p>From BCIT CST program blah blah blah allectetctetct...</p>
+                    <p>From BCIT CST program ......</p>
                 </div>
                 <div class="skills-info education-all">
                     <div class="education">
@@ -180,15 +181,15 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Web Design</h3>
-                                <span>Youtube</span>
+                                <h3>Title</h3>
+                                <span>subtitle</span>
                             </div>
                             <img src="images/uhere-logo-sample.png" alt="">
                         </div>
                         <div class="projects-modal flex-center">
                             <div class="projects-modal-body">
                                 <i class="fas fa-times projects-close-btn"></i>
-                                <h3>Web Design</h3>
+                                <h3>Title</h3>
                                 <img src="images/uhere-logo-sample.png" alt="">
                                 <p>Hello World!!!!!!</p>
                             </div>
@@ -199,14 +200,14 @@
                             <div class="overlay"></div>
                             <div class="info">
                                 <h3>Ktown</h3>
-                                <span>Youtube</span>
+                                <span>subtitle</span>
                             </div>
                             <img src="images/ktown-logo-sample.jpg" alt="">
                         </div>
                         <div class="projects-modal flex-center">
                             <div class="projects-modal-body">
                                 <i class="fas fa-times projects-close-btn"></i>
-                                <h3>Web Design</h3>
+                                <h3>Title</h3>
                                 <img src="images/uhere-logo-sample.png" alt="">
                                 <p>Hello World!!!!!!</p>
                             </div>
@@ -216,15 +217,15 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Web Design</h3>
-                                <span>Youtube</span>
+                                <h3>Title</h3>
+                                <span>subtitle</span>
                             </div>
                             <img src="images/uhere-logo-sample.png" alt="">
                         </div>
                         <div class="projects-modal flex-center">
                             <div class="projects-modal-body">
                                 <i class="fas fa-times projects-close-btn"></i>
-                                <h3>Web Design</h3>
+                                <h3>Title</h3>
                                 <img src="images/uhere-logo-sample.png" alt="">
                                 <p>Hello World!!!!!!</p>
                             </div>
@@ -234,15 +235,15 @@
                         <div class="img-card">
                             <div class="overlay"></div>
                             <div class="info">
-                                <h3>Web Design</h3>
-                                <span>Youtube</span>
+                                <h3>Title</h3>
+                                <span>subtitle</span>
                             </div>
                             <img src="images/uhere-logo-sample.png" alt="">
                         </div>
                         <div class="projects-modal flex-center">
                             <div class="projects-modal-body">
                                 <i class="fas fa-times projects-close-btn"></i>
-                                <h3>Web Design</h3>
+                                <h3>Title</h3>
                                 <img src="images/uhere-logo-sample.png" alt="">
                                 <p>Hello World!!!!!!</p>
                             </div>
@@ -342,6 +343,7 @@
             <p>© 2022 Paul Kim. All rights reserved.</p>
         </div>
     </footer>
+    <div class="loading-overlay flex-center"><i class="fas fa-spinner fa-pulse fa-xl"></i></div>
 
 
     <!--External scripts-->
