--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <!--Scroll to top button-->
-    <div class="scrollToTop-btn flex-center">
+    <!-- <div class="scrollToTop-btn flex-center">
         <i class="fas fa-arrow-up"></i>
-    </div>
+    </div> -->
 
     <!--Header-->
     <header>
