added relative positoin to parent element

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <!--Scroll to top button-->
-    <!-- <div class="scrollToTop-btn flex-center">
+    <div class="scrollToTop-btn flex-center">
         <i class="fas fa-arrow-up"></i>
-    </div> -->
+    </div>
 
     <!--Header-->
     <header>
@@ -51,7 +51,7 @@
                 <h3>Developer</h3>
                 <p>A passionate and meticulous software developer who likes problem solving.
                 </p>
-                <a href="" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
+                <a href="#contact" class="btn">Contact Me <i class="fas fa-arrow-circle-right"></i></a>
             </div>
             <div class="home-img">
                 <img src="images/main-photo.jpg" alt="">
